// Schema DBML - master-scrape (skrep-doctor)
// Reverse-engineered dari backend/src/db/schema.ts (Drizzle ORM) di project master-scrape.
// Import ke https://dbdiagram.io untuk visualisasi ERD.

Table users {
  id int [pk, increment]
  name text [not null]
  created_at timestamp [not null, default: `now()`]

  Note: 'Legacy - tidak terhubung ke tabel lain, tidak dipakai untuk auth aktif'
}

Table accounts {
  id int [pk, increment]
  label text [not null]
  type varchar [not null, note: 'enum: twitter, telegram, facebook, discord, instagram']
  credentials jsonb [not null, note: 'cookie session / bot token, bentuk bebas per platform']
  is_active boolean [not null, default: true]
  connection_status varchar [not null, default: 'unknown', note: 'enum: unknown, connected, disconnected, error']
  connection_error text
  last_checked_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table auto_post_rules {
  id int [pk, increment]
  name text [not null]
  trigger_type varchar [not null, note: 'enum: discord_observer, discord_cron, template, instagram_observer']
  source_account_id int [ref: > accounts.id, note: 'sumber channel (discord) atau akun scraping (instagram)']
  discord_channel_ids jsonb [note: 'string[] - untuk discord_observer/discord_cron']
  media_types jsonb [not null, default: `['image','video']`, note: 'MediaType[]']
  instagram_target_usernames jsonb [note: 'string[] - untuk instagram_observer']
  exclude_keywords jsonb [note: 'string[]']
  include_original_caption boolean [not null, default: true]
  cron_expression text [note: 'untuk discord_cron, template, instagram_observer']
  template_text text [note: 'untuk trigger template']
  template_media_url text [note: 'untuk trigger template']
  caption_suffix text
  target_account_ids jsonb [not null, note: 'number[] - daftar accounts.id tujuan publish']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table post_history {
  id int [pk, increment]
  rule_id int [ref: > auto_post_rules.id, note: 'ON DELETE SET NULL']
  target_account_id int [ref: > accounts.id, note: 'ON DELETE SET NULL']
  source_label text
  source_url text
  trigger_source varchar [note: 'enum: manual, cron, observer']
  caption text
  post_url text
  status varchar [not null, note: 'enum: pending, success, failed']
  attempts int [not null, default: 0]
  error_message text
  posted_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table processed_source_items {
  id int [pk, increment]
  rule_id int [not null, ref: > auto_post_rules.id, note: 'ON DELETE CASCADE']
  source_item_id text [not null, note: 'ID unik item sumber, mis. shortcode IG / ID pesan Discord']
  processed_at timestamp [not null, default: `now()`]
}

Table scheduled_posts {
  id int [pk, increment]
  source_account_id int [ref: > accounts.id, note: 'ON DELETE SET NULL']
  source_url text
  caption text [not null, default: '']
  media_path text
  thumbnail_url text
  is_video boolean [not null, default: false]
  target_account_ids jsonb [not null, default: `[]`, note: 'number[]']
  scheduled_at timestamp
  status varchar [not null, default: 'draft', note: 'enum: draft, scheduled, publishing, success, failed, cancelled']
  job_id text [note: 'ID job BullMQ (delayed job)']
  error_message text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table scrape_batch_jobs {
  id int [pk, increment]
  source_account_id int [not null, ref: > accounts.id, note: 'akun IG untuk browsing/scraping']
  target_username text [not null, note: 'username Instagram yang di-scrape']
  batch_size int [not null, default: 10]
  total_limit int [not null]
  fetched_count int [not null, default: 0]
  status varchar [not null, default: 'running', note: 'enum: running, stopped, completed, failed']
  error_message text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table scraped_posts {
  id int [pk, increment]
  batch_job_id int [not null, ref: > scrape_batch_jobs.id, note: 'ON DELETE CASCADE']
  shortcode text [not null]
  post_url text [not null]
  caption text [not null, default: '']
  thumbnail_url text
  is_video boolean [not null, default: false]
  status varchar [not null, default: 'pending', note: 'enum: pending, used']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (batch_job_id, shortcode) [unique]
  }
}
